crates/ferrum-interfaces/tests/ui/vnext/fail/resource_transition_receipt_is_not_deserialize.rs
use ferrum_interfaces::vnext::ResourceTransitionReceipt;

fn main() {
    let _: ResourceTransitionReceipt = serde_json::from_str("{}").unwrap();
}
